# RuleForge

./: License.txt  README.md  RuleForge.py  bench_gen_times.py  bench_gen_times_child.py  distance_matrix_generator.py  mdbscan_rule_generator.py  pyproject.toml  requirements.txt  rule-priority-evolution.ipynb
MDBSCAN/: symdbscan.sln
MDBSCAN/DistanceMatrixGenerator/: App.config  DistanceMatrixGenerator.csproj  Program.cs
MDBSCAN/MDBSCAN/: EditDistance.cs  JaroWinkler.cs  Program.cs
MDBSCAN/MDBSCAN/SoftWx.Match/: Distance.cs
MDBSCAN/RuleGenerator/: Program.cs
dictionaries/evolution/0_training/: darkweb2017-top1000.txt  myspace-20000.txt  phpbb-20000.txt  tuscl-20000.txt
dictionaries/evolution/1_attack/: 10-million-list-top10000.txt
dictionaries/evolution/2_target/: Xato-net-100k.txt  hotmail_M.txt
dictionaries/experiments/: english-6.txt  myspace-m.txt  phpbb-m.txt  rockyou-65-m.txt  rockyou-75-m.txt  tuscl-m.txt
dictionaries/recovered/: Xato-net-100k_mdbscan_combo29k.txt  phpbb-m_mdbscan_combo29k.txt
